--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clipboard": "^2.0.11",
     "framer-motion": "^10.18.0",
     "lucide-react": "^0.312.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18.2.0",
+    "react-live": "^4.1.5",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
